# Conduit

./: Cargo.toml  EXAMPLE.md  README.md
applications/android-intercom/: .gitignore  README.md  capacitor.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
applications/android-intercom/android/: capacitor.settings.gradle  variables.gradle
applications/android-intercom/android/app/: build.gradle  capacitor.build.gradle
applications/android-intercom/android/app/src/main/java/com/conduit/intercom/: MainActivity.java
applications/android-intercom/android/app/src/main/res/values/: strings.xml
applications/android-intercom/plugins/conduit/: package.json
applications/android-intercom/plugins/conduit/android/: build.gradle
applications/android-intercom/plugins/conduit/android/src/main/: AndroidManifest.xml
applications/android-intercom/plugins/conduit/android/src/main/java/com/conduit/plugins/: ConduitNative.kt  ConduitPlugin.kt
applications/android-intercom/plugins/conduit/android/src/main/jni/: conduit_jni.c
applications/android-intercom/plugins/conduit/src/: definitions.ts  index.ts  web.ts
applications/android-intercom/scripts/: build-apk.sh  ensure-android.mjs  install-apk.sh
applications/android-intercom/src/: app.ts  main.ts  styles.css  types.ts
applications/android-intercom/src/conduit/: bridge.ts
applications/ride-intercom/: Cargo.toml
applications/ride-intercom/src/: app.rs  config.rs  events.rs  group.rs  lib.rs  member.rs
conduit-cli/: Cargo.toml
conduit-cli/src/: args.rs  display.rs  error.rs  lib.rs  main.rs  opts.rs
conduit-cli/src/commands/: config.rs  mod.rs  node.rs  ride.rs  run.rs  send.rs  sim.rs  version.rs
conduit-cli/tests/: cli.rs
conduit-core/: Cargo.toml
conduit-core/src/: config.rs  constants.rs  error.rs  events.rs  ids.rs  lib.rs  logging.rs  serialization.rs  utils.rs  version.rs
conduit-core/src/packets/: header.rs  mod.rs  types.rs
conduit-discovery/: Cargo.toml
conduit-discovery/src/: beacon.rs  config.rs  driver.rs  engine.rs  lib.rs  peer.rs
conduit-discovery/src/drivers/: chain.rs  hotspot.rs  mock.rs  mod.rs  udp.rs  wifi_aware.rs  wifi_direct.rs
conduit-ffi/: Cargo.toml  build.rs
conduit-ffi/jni/: conduit_jni.c
conduit-ffi/src/: runtime.rs  types.rs
conduit-mesh/: Cargo.toml
conduit-mesh/src/: capabilities.rs  config.rs  engine.rs  events.rs  lib.rs  neighbor.rs  quality.rs  table.rs
conduit-packets/: Cargo.toml
conduit-packets/src/: body.rs  builder.rs  codec.rs  lib.rs  payload.rs  typed.rs
conduit-packets/src/payloads/: control.rs  discovery.rs  emergency.rs  heartbeat.rs  location.rs  messaging.rs  mod.rs  routing.rs  telemetry.rs  voice.rs
conduit-routing/: Cargo.toml
conduit-routing/src/: config.rs  congestion.rs  decision.rs  duplicate.rs  engine.rs  lib.rs  routes.rs  scoring.rs
conduit-sdk/: Cargo.toml
conduit-sdk/src/: conduit.rs  config.rs  diagnostics.rs  events.rs  lib.rs  network.rs
conduit-sdk/src/network/: udp.rs
conduit-security/: Cargo.toml
conduit-security/src/: cipher.rs  config.rs  engine.rs  envelope.rs  identity.rs  lib.rs  replay.rs  session.rs
conduit-transport/: Cargo.toml
conduit-transport/src/: compression.rs  config.rs  encryption.rs  engine.rs  fragment.rs  frame.rs  lib.rs  reassembly.rs
conduit-voice/: Cargo.toml
conduit-voice/src/: codec.rs  config.rs  echo.rs  engine.rs  jitter.rs  lib.rs  noise.rs  packetizer.rs  pipeline.rs  vad.rs
scripts/: build-android-ffi.sh  setup-android-cli.sh
