[package]
name = "conduit-cli"
description = "Command-line interface for the Conduit mesh platform"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "conduit"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
conduit-core = { path = "../conduit-core" }
conduit-sdk = { path = "../conduit-sdk" }
ride-intercom = { path = "../applications/ride-intercom" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
