[package]
name = "conduit-mesh"
description = "Mesh neighbor management for the Conduit communication platform"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
conduit-core = { path = "../conduit-core" }
conduit-discovery = { path = "../conduit-discovery" }
conduit-packets = { path = "../conduit-packets" }
serde = { version = "1", features = ["derive"] }
