[package]
name = "conduit-packets"
description = "Typed packet system for the Conduit communication platform"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
conduit-core = { path = "../conduit-core" }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
