[package]
name = "conduit-security"
description = "Encryption, authentication, and identity for Conduit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
conduit-core = { path = "../conduit-core" }
chacha20poly1305 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
hkdf = "0.12"
rand = "0.8"
sha2 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
serde = { version = "1", features = ["derive"] }
