[package]
name = "conduit-transport"
description = "Transport layer for the Conduit communication platform"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
conduit-core = { path = "../conduit-core" }
conduit-packets = { path = "../conduit-packets" }
chacha20poly1305 = "0.10"
miniz_oxide = "0.8"
rand = "0.8"
thiserror = "2"
